--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "get-firebase-ref",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "description": "Get a Firebase ref from a query and firebase module (web or admin)",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "js:next": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "repository": "https://github.com/rakannimer/mobx-fire",
+  "repository": "https://github.com/rakannimer/get-firebase-ref",
   "author": "rakannimer",
   "license": "MIT",
   "private": false,
   "scripts": {
     "build": "rollup -c",
     "start": "npm run build && node dist/index.cjs.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "tsc",
+    "c": "git-cz",
+    "setup:semantic-release": "npx semantic-release-cli setup",
+    "semantic-release": "semantic-release"
   },
   "files": [
     "dist/"
   ],
   "devDependencies": {
+    "git-cz": "^1.7.1",
     "prettier": "^1.14.3",
     "rollup": "^0.66.4",
     "rollup-plugin-typescript2": "^0.17.1",
+    "semantic-release": "^15.9.17",
     "typescript": "^3.1.1"
   },
   "jest": {
